fixed a bug with overflow

--- a/src/components/PlayerRender.module.scss
+++ b/src/components/PlayerRender.module.scss
@@ -5,7 +5,7 @@
   height: 100%;
   margin: 0 1vw;
   padding-top: 25vh;
-
+  overflow: hidden;
   position: relative;
 
   display: flex;
