--- a/src/components/SummonersRift.module.scss
+++ b/src/components/SummonersRift.module.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: -2vh;
   display: flex;
+  overflow: hidden;
 
   video {
     position: relative;
